--- a/src/app/Components/booking-car/add-and-edit/add-and-edit.component.html
+++ b/src/app/Components/booking-car/add-and-edit/add-and-edit.component.html
@@ -88,185 +88,72 @@
                         </div>
                     </div>
 
-                    <div class="field fieldmargin">
+                    <div class="field">
                         <div class="create__label">Services</div>
 
-                        <div class="container">
-                            <div class="column">
-                                <div class="field fieldmargin">
-                                    <div class="field__wrap">
-                                        <input class="field__input uppercase" type="text" formControlName="washing"
-                                            placeholder="washing">
-                                    </div>
-                                </div>
+                        <div class="grid-container">
+                            <div class="grid-item">
+                                <label class="checkbox">
+                                    <input class="checkbox__input" type="checkbox" formControlName="washing">
+                                    <span class="checkbox__inner">
+                                        <span class="checkbox__tick"></span>
+                                        <span class="checkbox__text">Washing</span>
+                                    </span>
+                                </label>
                             </div>
-                            <div class="column">
-                                <div class="field fieldmargin">
-                                    <div class="field__wrap">
-                                        <input class="field__input" type="number" formControlName="washingPrice"
-                                            placeholder="Washing Price">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
 
-                        <div class="container">
-                            <div class="column">
-                                <div class="field fieldmargin">
-                                    <div class="field__wrap">
-                                        <input class="field__input uppercase" type="text"
-                                            formControlName="dentingPainting" placeholder="Denting&painting">
-                                    </div>
-                                </div>
+                            <div class="grid-item">
+                                <label class="checkbox">
+                                    <input class="checkbox__input" type="checkbox" formControlName="dentingPainting">
+                                    <span class="checkbox__inner">
+                                        <span class="checkbox__tick"></span>
+                                        <span class="checkbox__text">Denting & painting</span>
+                                    </span>
+                                </label>
                             </div>
-                            <div class="column">
-                                <div class="field fieldmargin">
-                                    <div class="field__wrap">
-                                        <input class="field__input" type="number" formControlName="dentingPaintingPrice"
-                                            placeholder="Denting & painting Price">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
 
-                        <div class="container">
-                            <div class="column">
-                                <div class="field fieldmargin">
-                                    <div class="field__wrap">
-                                        <input class="field__input uppercase" type="text" formControlName="acwork"
-                                            placeholder="Ac work">
-                                    </div>
-                                </div>
+                            <div class="grid-item">
+                                <label class="checkbox">
+                                    <input class="checkbox__input" type="checkbox" formControlName="acwork">
+                                    <span class="checkbox__inner">
+                                        <span class="checkbox__tick"></span>
+                                        <span class="checkbox__text">Ac Work</span>
+                                    </span>
+                                </label>
                             </div>
-                            <div class="column">
-                                <div class="field fieldmargin">
-                                    <div class="field__wrap">
-                                        <input class="field__input" type="number" formControlName="acworkPrice"
-                                            placeholder="Ac work Price">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
 
-                        <div class="container">
-                            <div class="column">
-                                <div class="field fieldmargin">
-                                    <div class="field__wrap">
-                                        <input class="field__input uppercase" type="text" formControlName="electricwork"
-                                            placeholder="Electric Work">
-                                    </div>
-                                </div>
+                            <div class="grid-item">
+                                <label class="checkbox">
+                                    <input class="checkbox__input" type="checkbox" formControlName="electricwork">
+                                    <span class="checkbox__inner">
+                                        <span class="checkbox__tick"></span>
+                                        <span class="checkbox__text">Electric Work</span>
+                                    </span>
+                                </label>
                             </div>
-                            <div class="column">
-                                <div class="field fieldmargin">
-                                    <div class="field__wrap">
-                                        <input class="field__input" type="number" formControlName="electricworkPrice"
-                                            placeholder="Electric work Price">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
 
-                        <div class="container">
-                            <div class="column">
-                                <div class="field fieldmargin">
-                                    <div class="field__wrap">
-                                        <input class="field__input uppercase" type="text" formControlName="brackdown"
-                                            placeholder="Brackdown">
-                                    </div>
-                                </div>
+                            <div class="grid-item">
+                                <label class="checkbox">
+                                    <input class="checkbox__input" type="checkbox" formControlName="brackdown">
+                                    <span class="checkbox__inner">
+                                        <span class="checkbox__tick"></span>
+                                        <span class="checkbox__text">Brackdown</span>
+                                    </span>
+                                </label>
                             </div>
-                            <div class="column">
-                                <div class="field fieldmargin">
-                                    <div class="field__wrap">
-                                        <input class="field__input" type="number" formControlName="brackdownPrice"
-                                            placeholder="Brackdown Price">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
 
-                        <div class="container">
-                            <div class="column">
-                                <div class="field fieldmargin">
-                                    <div class="field__wrap">
-                                        <input class="field__input uppercase" type="text" formControlName="rr"
-                                            placeholder="RR">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="column">
-                                <div class="field fieldmargin">
-                                    <div class="field__wrap">
-                                        <input class="field__input" type="number" formControlName="rrPrice"
-                                            placeholder="RR Price">
-                                    </div>
-                                </div>
+                            <div class="grid-item">
+                                <label class="checkbox">
+                                    <input class="checkbox__input" type="checkbox" formControlName="rr">
+                                    <span class="checkbox__inner">
+                                        <span class="checkbox__tick"></span>
+                                        <span class="checkbox__text">RR</span>
+                                    </span>
+                                </label>
                             </div>
                         </div>
 
                     </div>
-
-
-                    <!-- <div class="field fieldmargin">
-                        <div class="create__label">Services</div>
-                        <div class="field__wrap" style=" margin-top: 5px;">
-                            <div class="container2 card"
-                                *ngFor="let item of serviceItems; let index = index; trackBy: trackByIndex">
-                                <div class="column2">
-                                    <div class="field fieldmargin">
-                                        <div class="field__wrap">
-                                            <input class="field__input" type="text" [value]="item.serviceName" placeholder="Name"
-                                                (input)="onServiceChange(index, $event)">
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="column2">
-                                    <div class="field fieldmargin">
-                                        <div class="field__wrap">
-                                            <input class="field__input" type="number" [value]="item.qty" placeholder="Qty"
-                                                (input)="onServiceQtyChange(index, $event)">
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="column2">
-                                    <div class="field fieldmargin">
-                                        <div class="field__wrap">
-                                            <input class="field__input" type="number" [value]="item.servicePrice" placeholder="Price"
-                                                (input)="onServicePriceChange(index, $event)">
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="column2">
-                                    <div class="field fieldmargin">
-                                        <div class="field__wrap">
-                                            <input disabled class="field__input" type="text" [value]="item.total" placeholder="Total" >
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="column2 column-small">
-                                    <div class="field fieldmargin">
-                                        <span (click)="removeService(index)">
-                                            <svg class="icon icon-trash">
-                                                <use xlink:href="#icon-trash"></use>
-                                            </svg>
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <a class="button-stroke panel__button answer__button" style="margin-left: 40px;"
-                        (click)="addService()">
-                        <svg class="icon icon-add">
-                            <use xlink:href="#icon-plus"></use>
-                        </svg> Add New service
-                    </a> -->
 
                     <div class="filters__btns">
                         <a class="button-stroke panel__button answer__button" routerLink="/booking">Cancel</a>
