--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -29,7 +29,7 @@
       Booking
     </a>
 
-    <a class="sidebar__item" routerLink="/booking" (click)="closeSidebar()" >
+    <a class="sidebar__item" routerLink="/invoice" (click)="closeSidebar()" >
       <svg class="icon icon-invoice">
         <use xlink:href="#icon-invoice"></use>
       </svg>
